--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
             </p>
     </div>
     <footer>
-        <h2>Cảm ơn vì đã đọc bài blog này.</h2>
+        <h2>Cảm ơn vì đã đọc bài bài viết này.</h2>
+        <h2>Haujohn</h2>
     </footer>
 </body>
 </html>
